--- a/Data Pre-processing.ipynb
+++ b/Data Pre-processing.ipynb
@@ -158,19 +158,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the Dataset into X and y numpy arrays"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Take X and y as numpy arrays\n",
+    "# Using labels \n",
+    "X = dataset.loc[:, 'Country': 'Salary'].values\n",
+    "y = dataset.loc[:, 'Purchased'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using indices\n",
     "X = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +206,7 @@
        "       ['France', 37.0, 67000.0]], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +227,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,11 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create imputer object, that replaces missing values, with the average along columns(axis=0)\n",
+    "# along the columns, but axis = 0 is like iterating through rows.. so visualise accordingly..\n",
     "imputer = Imputer(missing_values = np.nan, strategy = 'mean', axis=0)\n",
     "\n",
     "'''\n",
@@ -248,7 +267,12 @@
     "This case it calculates separate averages for columns 1 and 2\n",
     "(Note: Only passing float-columns, as imputer dosen't accept string columns)\n",
     "'''\n",
+    "\n",
+    "#Note: Why different/separte fit and transform\n",
+    "# You could fit it on training data (Calculate stats - mean/mode, etc)\n",
+    "# And transform it (Apply the operation) on test data (different data)\n",
     "imputer = imputer.fit(X[:,1:3])\n",
+    "\n",
     "\n",
     "'''\n",
     "Apply those statistics to transform data (In this case replace nan's with avgs calculated in previous step)\n",
@@ -261,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +303,7 @@
        "       ['France', 37.0, 67000.0]], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,18 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#First convert categorical strings to numbers (0 to num_classes - 1)\n",
     "labelencoder_X = LabelEncoder()\n",
+    "\n",
+    "# Here we use fit_transform together because stats from 1 data are not going to be applied to another\n",
     "X[:,0] = labelencoder_X.fit_transform(X[:,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +361,7 @@
        "       [0, 37.0, 67000.0]], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +425,7 @@
        "        6.70000000e+04]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,13 +458,34 @@
        "array([0, 1, 0, 0, 1, 1, 0, 1, 0, 1])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A note on Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we used one hot encoding, as the number of categories small (3), it would be infeasible\n",
+    "and computationally expensive to do it for large number of categories (100's ~ 1000's).\n",
+    "Also the drawback is that one-hot encoding do not store any semantic relationship between\n",
+    "each category, (which wasn't required in this case anyway), there might be cases where we need them,\n",
+    "eg. in NLP task, the words 'Queen' and 'King' are related in a way, that is similar to how 'Man' and 'Woman' are related.\n",
+    "Also 'Queen' and 'Woman' might be related how 'King' and 'Man' are related.\n",
+    "This method of representation that preserves the relative similarity/dissimilarity between vectors in \n",
+    "vector space is called 'Embedding'."
    ]
   },
   {
@@ -459,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +539,7 @@
        "         5.80000000e+04]]), array([1, 1, 1, 0, 1, 0, 0, 1]))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +560,7 @@
        "        [0.0e+00, 1.0e+00, 0.0e+00, 5.0e+01, 8.3e+04]]), array([0, 0]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,14 +578,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
     "Now different features/columns here are in different ranges. \n",
     "eg. Age is in the range 20 to 80, whereas salary is in the range 10000 to 50000\n",
-    "A lot of machine learning algorithms involve calculating Eucledian Distance (Difference Squared)\n",
+    "- A lot of machine learning algorithms involve calculating Eucledian Distance (Difference Squared)\n",
+    "- Also gradient descent converges faster if all values are normalized mean zero and standard deviation 1\n",
     "Thus features/columns with larger values will dominate over ones with smaller values and the model might be biased\n",
     "towards those columns.\n",
     "Hence it's better to bring all values to the same scale (Say 0 to 1, -1 to 1, etc.)\n",
@@ -551,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,12 +610,15 @@
     "\n",
     "sc_X = StandardScaler()\n",
     "X_train = sc_X.fit_transform(X_train)\n",
+    "# sc_X = sc_X.fit(X_train)\n",
+    "# X_train = sc_X.transform(X_train)\n",
+    "\n",
     "X_test = sc_X.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +634,7 @@
        "       [ 1.        , -0.37796447, -0.77459667, -0.59788085, -0.48214934]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +655,7 @@
        "       [-1.        ,  2.64575131, -0.77459667,  1.98496442,  2.13981082]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
